--- a/MyTiKi/app/src/main/res/layout/fragment_sign_in.xml
+++ b/MyTiKi/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <import type="android.text.TextUtils" />
 
         <variable
             name="userViewModel"
             type="com.thuypham.ptithcm.mytiki.viewmodel.UserViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clSignIn"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="36dp"
+            tools:layout_editor_absoluteY="28dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/text_email_login_error"
@@ -31,11 +37,11 @@
                     android:id="@+id/edt_email_sign_in"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:afterTextChanged="@{(editable) -> userViewModel.afterEmailChange(editable)}"
                     android:hint="@string/email_phone_number"
                     android:inputType="textEmailAddress"
+                    android:importantForAutofill="auto"
                     android:singleLine="true"
-                    android:text="@{userViewModel.email}"
+                    android:text="@={userViewModel.email}"
                     android:theme="@style/EditTextTheme"
                     app:clearButtonMode="whileEditing" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -58,21 +64,21 @@
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:singleLine="true"
-                    android:text="@{userViewModel.pasword}"
+                    android:text="@={userViewModel.password}"
                     android:theme="@style/EditTextTheme" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/btn_sign_in"
+                style="@style/Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/edit_btn_sign_in"
+                android:enabled="@{!(TextUtils.isEmpty(userViewModel.email))&amp;!(TextUtils.isEmpty(userViewModel.password))}"
                 android:linksClickable="true"
-                android:onClick="onClickLogin"
                 android:text="@string/sign_in"
                 android:textColor="@android:color/white" />
 
@@ -82,26 +88,26 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/ripple_btn_corner"
                 android:gravity="center"
-                android:linksClickable="true"
-                android:onClick="onClickForgotPassword"
+                android:clickable="true"
                 android:padding="16dp"
                 android:text="@string/forgot_password"
-                android:textColor="@color/colorBlue" />
+                android:textColor="@color/colorBlueDark"
+                android:focusable="true" />
 
         </LinearLayout>
 
-        <include
-            layout="@layout/loading_layout"
+        <ProgressBar
+            android:id="@+id/progressSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="200dp"
-            android:visibility="gone"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
