--- a/MyTiKi/app/src/main/res/layout/fragment_sign_in_and_sing_up.xml
+++ b/MyTiKi/app/src/main/res/layout/fragment_sign_in_and_sing_up.xml
@@ -1,46 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout>
 
-    <androidx.appcompat.widget.Toolbar
+    <data>
+
+        <variable
+            name="fragment"
+            type="com.thuypham.ptithcm.mytiki.feature.authentication.SignInUpFragment" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="@color/colorBlue">
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/btn_cancel_sign_in_up"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:linksClickable="true"
-            android:onClick="onBtnCancelSignInUpFragment"
-            android:padding="16dp"
-            app:srcCompat="@drawable/ic_cancel"
-            android:tint="@android:color/white" />
+            android:adjustViewBounds="true"
+            android:src="@drawable/shopping"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.8" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="@string/title_sign_in_sign_up"
-            android:textColor="@android:color/white"
-            android:textSize="22sp" />
+        <Button
+            android:id="@+id/btnSignUp"
+            style="@style/Button.CircleCorner"
+            android:onClick="@{() -> fragment.onClickShowSignUpFragment()}"
+            android:text="@string/sign_up"
+            android:layout_margin="@dimen/default_margin"
+            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.appcompat.widget.Toolbar>
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_sign_in_up"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager_sign_in_up"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    </androidx.viewpager.widget.ViewPager>
-</LinearLayout>
+        <Button
+            android:id="@+id/btnSignIn"
+            style="@style/Button"
+            android:layout_margin="@dimen/default_margin"
+            android:onClick="@{() -> fragment.onClickShowSignInFragment()}"
+            android:text="@string/sign_in"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
