--- a/MyTiKi/app/src/main/res/layout/item_load_state.xml
+++ b/MyTiKi/app/src/main/res/layout/item_load_state.xml
@@ -35,7 +35,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:background="@color/blue"
+            android:background="@color/colorBlue"
             android:text="Retry"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
