--- a/MyTiKi/app/src/main/res/values/colors.xml
+++ b/MyTiKi/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#3587C8</color>
+    <color name="colorPrimaryDark">#3587C8</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlue">#05B6F0</color>
     <color name="colorBlueDark">#0F69B1</color>
@@ -22,4 +22,10 @@
     <color name="colorGreen">#4CAF50</color>
     <color name="greenColor">#0D8D12</color>
     <color name="grayLight">#19B4B4B4</color>
+    <color name="colorGrayBtn">#9C9C9C</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhite50">#7AFFFFFF</color>
+    <color name="colorBlueLight">#76B7EC</color>
+    <color name="colorBlueCenter">#3587C8</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
