authentication have done, add custom drawer layout

--- a/MyTiKi/app/src/main/res/layout/activity_main_employee.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_main_employee.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".feature.employee.main.MainEmployeeActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<layout>
+
+    <com.thuypham.ptithcm.mytiki.widget.CustomDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawerMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".feature.employee.main.MainEmployeeActivity"
+        tools:openDrawer="start">
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/clMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layoutDirection="ltr">
+
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    </com.thuypham.ptithcm.mytiki.widget.CustomDrawerLayout>
+</layout>
