--- a/MyTiKi/app/src/main/res/drawable/bg_stroke_rounded_corner.xml
+++ b/MyTiKi/app/src/main/res/drawable/bg_stroke_rounded_corner.xml
@@ -4,6 +4,6 @@
     <solid android:color="@android:color/white"/>
     <stroke
         android:width="1dp"
-        android:color="@color/colorBlue" />
+        android:color="@color/colorBlueDark" />
     <corners android:radius="5dp" />
 </shape>
