--- a/MyTiKi/app/src/main/res/layout/home_fragment.xml
+++ b/MyTiKi/app/src/main/res/layout/home_fragment.xml
@@ -309,8 +309,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="300dp"
-                android:visibility="gone"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
