--- a/MyTiKi/app/src/main/res/values/styles.xml
+++ b/MyTiKi/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="colorPrimary">@color/colorBlueDark</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="autoCompleteTextViewStyle">@style/cursorColor</item>
-        <item name="colorPrimaryDark">@color/colorWhiteBG</item>
+        <item name="colorPrimaryDark">@color/colorBlueDark</item>
         <item name="colorAccent">@color/colorBlue</item>
     </style>
 
@@ -69,7 +69,7 @@
         <item name="android:textColorHint">@color/colorTextHint</item>
         <item name="android:textSize">16sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">@color/colorGray</item>
+        <item name="colorAccent">@color/colorBlueDark</item>
         <item name="colorControlNormal">@color/colorBlueDark</item>
         <item name="colorControlActivated">@color/colorBlueDark</item>
     </style>
@@ -90,5 +90,25 @@
         <item name="colorAccent">@color/colorBlueDark</item>
         <item name="android:textColorSecondary">@color/colorGray</item>
     </style>
+
+    <style name="Divider">
+        <item name="android:background">@color/colorDivider</item>
+    </style>
+
+    <style name="Divider.Horizontal" parent="Divider">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">1dp</item>
+    </style>
+
+    <style name="Button.Drawer">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:background">@drawable/ripple_btn_corner</item>
+        <item name="android:padding">@dimen/margin8</item>
+        <item name="android:paddingStart">@dimen/default_margin</item>
+        <item name="android:paddingEnd">@dimen/default_margin</item>
+    </style>
+
 
 </resources>
